added register auth handler & password hashing
